--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,27 +2,33 @@ name: Build and Push Docker chase_project4_image
 
 on:
   push:
-    tags: 
-      - '-v*.*'
-    branches:
-      - main
+    tags:
+      - 'v*.*' # Trigger workflow when a tag starting with 'v' followed by major and minor version is pushed
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
+      - name: Build Docker image
+        run: docker build -t buckeyechase135/chase_project4_image:${{ github.ref }} .
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image
-        run: docker build -t buckeyechase135/chase_project4_image:latest .
+      - name: Tag Docker image
+        run: |
+          docker tag buckeyechase135/chase_project4_image:${{ github.ref }} buckeyechase135/chase_project4_image:latest
+          docker tag buckeyechase135/chase_project4_image:${{ github.ref }} buckeyechase135/chase_project4_image:${{ github.ref }}
 
-      - name: Push Docker image
-        run: docker push buckeyechase135/chase_project4_image:latest
+      - name: Push Docker images to DockerHub
+        run: |
+          docker push buckeyechase135/chase_project4_image:latest
+          docker push buckeyechase135/chase_project4_image:${{ github.ref }}
+
