--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,7 @@
 name: Build and Push Docker chase_project4_image
 
 on:
+  workflow_dispatch:
   push:
     tags:
       - 'v*.*' 
@@ -10,26 +11,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Extract tag name
         id: tag
         uses: docker/metadata-action@v3
         with:
           keys: ref
 
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Build Docker image
-        run: docker build -t buckeyechase135/chase_project4_image:${{ steps.tag.outputs.ref#refs/tags/}} .
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            buckeyechase135/chase_project4_image:${{ steps.tag.outputs.ref#refs/tags/}}
+            buckeyechase135/chase_project4_image:latest
 
       - name: Log in to DockerHub
-        uses: docker/login-action@v2
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Push Docker images to DockerHub
-        run: |
-          docker push buckeyechase135/chase_project4_image:${{ steps.tag.outputs.ref#refs/tags/}}
-          docker push buckeyechase135/chase_project4_image:latest
-
