--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,49 @@
 name: Build and Push Docker chase_project4_image
 
 on:
-  workflow_dispatch:
   push:
+    branches:
+      - 'master'
     tags:
-      - 'v*.*' 
+      - 'v*.*'
+  pull_request:
+    branches:
+      - 'master'
 
 jobs:
-  build-and-push:
+  docker:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      -
+        name: Checkout
         uses: actions/checkout@v2
 
-      - name: Extract tag name
-        id: tag
-        uses: docker/metadata-action@v3
+      -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
         with:
-          keys: ref
-
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
+          images: |
+            buckeyechase135/chase_project4_image
           tags: |
-            buckeyechase135/chase_project4_image:${{ steps.tag.outputs.ref#refs/tags/}}
-            buckeyechase135/chase_project4_image:latest
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
 
-      - name: Log in to DockerHub
+      -
+        name: Login to DockerHub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      -
+        name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
