--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,20 +6,15 @@ on:
       - 'main'
     tags:
       - 'v*.*'
-  pull_request:
-    branches:
-      - 'main'
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
 
-      -
-        name: Docker meta
+      - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
         with:
@@ -31,23 +26,24 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
 
-      -
-        name: Login to DockerHub
+      - name: Extract major version
+        id: major_version
+        run: echo "::set-output name=major::$(echo ${{ steps.meta.outputs.tags }} | grep -oE 'v[0-9]+' | sed 's/v//')"
+
+      - name: Login to DockerHub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      -
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
-            buckeyechase135/chase_project4_image:${{ steps.meta.outputs.tags }}
-            buckeyechase135/chase_project4_image:${{ steps.meta.outputs.major }}
-            buckeyechase135/chase_project4_image:latest
+            ${{ steps.meta.outputs.tags }}
+            buckeyechase135/chase_project4_image:${{ steps.major_version.outputs.major }}
           labels: ${{ steps.meta.outputs.labels }}
 
